deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubetest
  labels:
    app: kubetest
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: kubetest
    spec:
      containers:
        - name: kubetest
          image: nullah/kubetest:0.1.6
          ports:
            - containerPort: 3000
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=kubetest-205122:northamerica-northeast1:kubetest=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
        # [END proxy_container]
      # [START volumes]
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      # [END volumes]
